2006-03-21  Sven Herzberg  <herzi@gnome-de.org>

	* src/net/client.c,
	* src/net/game-manager-proxy.c,
	* src/net/game-manager.c,
	* src/net/simple-server.c,
	* src/ui/game-network-player-manager.c,
	* src/ui/ui-network-client.c,
	* src/ui/ui-network-server.c: fixed gcc 4 warnings (based upon
	a patch from Michael Knox)

2006-02-05  Clytie Siddall <clytie@riverland.net.au>

	* vi.po: Updated Vietnamese translation.

2006-01-24  Clytie Siddall <clytie@riverland.net.au>

	* configure.in	Added vi in ALL_LINGUAS line.
	
	2006-01-07  Ilkka Tuohela  <hile@iki.fi>

	* configure.in: Added fi to ALL_LINGUAS

2005-10-12  Pawan Chitrakar  <pchitrakar@gmail.com>

	* configure.in: Added ne in ALL_LINGUAS

2005-08-10  Alexander Shopov  <ash@contact.bg>

	* configure.in: Added "bg" (Bulgarian) to ALL_LINGUAS

2005-04-01  Steve Murphy  <murf@e-tools.com>

	* configure.in: Added "rw" to ALL_LINGUAS.

2005-03-29  Sven Herzberg  <herzi@gnome-de.org>

	* src/ui/eggcellrendererkeys.c: included a patch from Robert Day
	<zarin@dscn.net> to fix compilation with gcc 3.4

2005-03-16  Abel Cheung  <maddog@linuxhall.org>

	* configure.in: Added "zh_TW" to ALL_LINGUAS.

2005-01-03  Satoru SATOH <ss@gnome.gr.jp>

	* configure.in: Added 'ja' (Japanese) to ALL_LINGUAS

2004-12-24  Laurent Belmonte  <laurent.belmonte@aliacom.fr>

	quick fix for network game. not tested
	* src/monkey/monkey.c:
	* src/monkey/monkey.h:
	* src/net/game.c: (bubbles_exploded):
	* src/net/message-handler.c: (network_message_handler_class_init),
	(network_message_handler_send_waiting_added),
	(parse_waiting_added):
	* src/net/message-handler.h:
	* src/net/monkey-marshal.list:
	* src/ui/game-network-player.c: (recv_waiting_added),
	(game_network_player_bubble_shot):

2004-12-03  Laurent Belmonte  <laurent.belmonte@aliacom.fr>

	audio stuff 
	* sounds/Makefile.am:
	* sounds/destroy_group.wav:
	* sounds/launch.wav:
	* sounds/rebound.wav:
	* sounds/stick.wav:
	* src/audio/Makefile.am: