@@ -68,8 +68,7 @@ AC_SUBST(LIBMONKEYVIEW_A_LIBS)
 PKG_CHECK_MODULES(LIBMONKEYAUDIO_A,[
 	gtk+-2.0
 	gthread-2.0
-	gstreamer-0.8
-	gstreamer-gconf-0.8
+	gstreamer-0.10
 	])
 AC_SUBST(LIBMONKEYAUDIO_A_CFLAGS)
 AC_SUBST(LIBMONKEYAUDIO_A_LIBS)
@@ -88,8 +87,7 @@ PKG_CHECK_MODULES(UI,[
 	gthread-2.0
 	librsvg-2.0
 	libgnomeui-2.0
-	gstreamer-0.8
-	gstreamer-gconf-0.8
+	gstreamer-0.10
 	gconf-2.0
 	libglade-2.0
 	])
